Updated MapModel::load to use Paths.get instead of Path.of to resolve Windows path issue (TA fix)